--- a/soft-project/package.json
+++ b/soft-project/package.json
@@ -21,6 +21,7 @@
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   },
   "devDependencies": {
