--- a/soft-project/package.json
+++ b/soft-project/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-ssm": "^3.31.0",
+    "actions-on-google": "^3.0.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dialogflow-fulfillment": "^0.6.1",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
