--- a/soft-project/package.json
+++ b/soft-project/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "json-web-token": "^3.2.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
